<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_rewind">Rewind</string>
    <string name="activity_main_ff">Fast Forward</string>
    <string name="activity_main_playing">Playing music</string>
    <string name="activity_main_pause">Pausing music</string>
    <string name="activity_main_finished">Music finished</string>
    <string name="activity_main_label_pause">Pause</string>
    <string name="activity_main_label_play">Play</string>
</resources>
